--- a/css/style.css
+++ b/css/style.css
@@ -583,4 +583,121 @@ body{
 *
 ********以下為login.html***********
 *
-/**********************************
+/**********************************/
+
+
+.login-page{
+    background: #efe9e7;
+    padding-bottom: 30px;
+}
+
+.login-title h2{
+    font-size: 48px;
+    font-weight: 700;
+    padding-top: 50px;
+    padding-bottom: 5px;
+}
+.login-title h3{
+    font-size: 20px;
+    font-weight: 600;
+    padding-bottom: 35px;
+}
+
+.login-title h2,
+.login-title h3{
+    color: #3D1101;
+    text-align: center;
+}
+
+.login-form{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.login-form h4{
+    margin: 0 auto;
+    text-align: center;
+    color: #3D1101;
+    font-size: 18px;
+    font-weight: 700;
+    padding-top: 12px;
+    padding-bottom: 16px;
+}
+
+.login-form-container{
+    margin: 0 auto;
+    max-width: 350px;
+    color: #3D1101;
+    box-shadow: 3px 3px 4px 0px rgba(0,0,0,0.16); 
+}
+
+
+.login-form{
+    margin: 0 auto;
+    border-top: 3px solid #FF5E45;
+}
+.login-form label{
+    padding-bottom: 3px;
+}
+
+.login-form input[type="email"]{
+    margin-bottom: 15px;
+    background-image: url(../images/login-icon.png);
+    background-repeat: no-repeat;
+    background-position: 3px 10px;
+}
+.login-form input[type="password"]{
+    margin-bottom: 15px;
+    background-image: url(../images/login-icon-pw.png);
+    background-repeat: no-repeat;
+    background-position: 3px 10px;
+}
+
+
+.login-form input:focus{
+    background-image: none;
+}
+
+.login-form a{
+    text-decoration: none;
+    color: #FF5E45;
+    font-size: 14px;
+}
+
+.login-form input{
+    width: 95%;
+    height: 32px;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 1px 2px 4px gray;
+}
+
+.login-btn{
+    margin: 0 auto;
+    width: 80%;
+    padding-top: 30px;
+    padding-bottom: 15px;
+}
+
+
+.login-btn a{
+    text-align: center;
+    padding: 7px 0;
+    height: 32px;
+    width: 40%;
+    background: rgba(0, 0, 0, .35);
+    border-radius: 3px;
+    color: white;
+    font-size: 16px;
+    margin-right: 24px;
+
+}
+.login-btn button{
+    height: 32px;
+    width: 40%;
+    border-radius: 3px;
+    color: white;
+    background: #F56C23;
+    font-size: 16px;
+}   
