--- a/css/style.css
+++ b/css/style.css
@@ -636,6 +636,7 @@ body{
 .login-form{
     margin: 0 auto;
     border-top: 3px solid #FF5E45;
+    padding: 0 2px;
 }
 .login-form label{
     padding-bottom: 3px;
@@ -701,3 +702,11 @@ body{
     background: #F56C23;
     font-size: 16px;
 }   
+
+/****以上login page****
+*
+*
+*******以下 shop cart page*****
+*
+*/
+
